--- a/.github/workflows/publish_changes_to_sns.yml
+++ b/.github/workflows/publish_changes_to_sns.yml
@@ -44,6 +44,6 @@ jobs:
           # A AWSN SNS Region. Can alternatively be stored in environment
           AWS_REGION: us-west-2
           # A AWS SNS Key. Can alternatively be stored in environment
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.PUBLISH_ACCESS_KEY_ID }}
           # A AWS SNS Secret. Can alternatively be stored in environment
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.PUBLISH_SECRET_ACCESS_KEY }}
