--- a/.github/workflows/deploy_scheduler.yml
+++ b/.github/workflows/deploy_scheduler.yml
@@ -1,16 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy Reminder
+name: Deploy Scheduler
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
     branches: [ master ]
-    paths: [ reminder/** ]
+    paths: [ scheduler/** ]
   pull_request:
     branches: [ master ]
-    paths: [ reminder/** ]
+    paths: [ scheduler/** ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -31,7 +31,7 @@ jobs:
           # Filename for archive
           filename: release.zip
           # Working directory before zipping
-          directory: ./reminder
+          directory: ./scheduler
           
       - name: Deploy AWS Lambda function
         # You may pin to the exact commit or the version.
@@ -39,9 +39,9 @@ jobs:
         uses: yvesgurcan/deploy-lambda-function@v0.0.5
         with:
           # Zip package of Lambda and dependencies
-          package: reminder/release.zip
+          package: scheduler/release.zip
           # Name of Lambda function
-          function-name: UofTAssignmentRemind
+          function-name: UofTAssignmentScheduler
           # AWS secret key
           AWS_SECRET_KEY: ${{ secrets.LAMBDA_UPDATE_SECRET_ACCESS_KEY }} 
           # AWS secret key ID
